--- a/StudentManagementWebApp/Views/Error/Expt.cshtml
+++ b/StudentManagementWebApp/Views/Error/Expt.cshtml
@@ -7,7 +7,9 @@
 <body>
     <div class="text-center">
         <h1 style="margin-top: 50px; color: red">Đã Xảy Ra Lỗi!</h1>
-        <h2>@ViewBag.Err</h2>
+        <br />
+        <h3>Vui lòng liên hệ bộ phận kỹ thuật để được xử lý!</h3>
+        <h4>Mã Lỗi: @ViewBag.Err</h4>
     </div>
 </body>
 </html>
