--- a/StudentManagementWebApp/Views/Shared/_ConfirmForm.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_ConfirmForm.cshtml
@@ -9,6 +9,7 @@
             </div>
             <div class="modal-body" style="color: #000">
                 <p>Bạn có chắc chắn muốn thực hiện hành động này chưa ?</p>
+                <p id="additionalInfo"></p>
             </div>
             <div class="modal-footer">
                 <button id="submitBtn" type="button" class="btn btn-primary" aria-label="Save">Ok</button>
