update new feature: Score Updater

--- a/StudentManagementWebApp/Views/Shared/_ConfirmForm.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_ConfirmForm.cshtml
@@ -13,7 +13,7 @@
             </div>
             <div class="modal-footer">
                 <button id="submitBtn" type="button" class="btn btn-primary" aria-label="Save">Ok</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
+                <button id="abortBtn" type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
             </div>
         </div>
     </div>
