--- a/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
@@ -153,7 +153,7 @@
         }
         
     </script>
-    <script src="~/Scripts/Customs/CR.js"></script>
+    <script src="~/Scripts/Customs/Custom_01.js"></script>
     <!-- Scripts for chat hub-->
     <script src="~/Scripts/jquery.signalR-2.4.3.min.js"></script>
     <script src="~/signalr/hubs"></script>
