--- a/StudentManagementWebApp/Views/Shared/_SideBar.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_SideBar.cshtml
@@ -46,8 +46,9 @@
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Sinh Viên</h6>
-                    @Html.ActionLink("Đăng ký học phần", "PreDKHP", "Student", null, htmlAttributes: new { @class="collapse-item"})
-                    <a class="collapse-item" href="#">Cập nhật điểm</a>
+                    @Html.ActionLink("Đăng ký học phần", "PreDKHP", "Student", null, htmlAttributes: new { @class = "collapse-item" })
+                    @Html.ActionLink("Cập nhật điểm", "PreScoreUpdater", "Student", null, htmlAttributes: new { @class = "collapse-item" })
+
                     <h6 class="collapse-header">Hệ Thống</h6>
                     <a class="collapse-item" href="#">Cập nhật môn</a>
                 </div>
