--- a/StudentManagementWebApp/Views/Student/ResultDetails.cshtml
+++ b/StudentManagementWebApp/Views/Student/ResultDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StudentManagementWebApp.Models.Student
 
 @{
-    ViewBag.Title = "Result Details";
+    ViewBag.Title = "Kết Quả Học Tập";
 }
 <div class="breadcrumb">
     <div class="breadcrumb-item">
