--- a/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
@@ -21,7 +21,7 @@
 
     <link rel="stylesheet" href="~/Content/Customs/sb-admin-2.min.css" />
     <link rel="stylesheet" href="@Url.Content("~/Content/Customs/navbar.css")" media="all" />
-    <link rel="stylesheet" href="~/Content/Customs/Custom_1.razor.css" media="all" />
+    <link rel="stylesheet" href="~/Content/Customs/Custom_1.razor.min.css" media="all" />
     <link rel="stylesheet" href="@Url.Content("//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css")" media="all" />
 
 </head>
@@ -104,7 +104,7 @@
     <script src="~/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="~/Scripts/Customs/sb-admin-2.js"></script>
+    <script src="~/Scripts/Customs/sb-admin-2.min.js"></script>
     <script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script>
         $(document).ready(function () {
