--- a/StudentManagementWebApp/Views/Authentication/Login.cshtml
+++ b/StudentManagementWebApp/Views/Authentication/Login.cshtml
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng nhập</title>
-    @Styles.Render("~/Content/Customs/Login.razor.css")
+    @Styles.Render("~/Content/Customs/Login.razor.min.css")
 </head>
 
 @if (ViewBag.error != null)
@@ -61,5 +61,5 @@
 
 </body>
 @Scripts.Render("https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js")
-@Scripts.Render("~/Scripts/Customs/Login.razor.js")
+@Scripts.Render("~/Scripts/Customs/Login.razor.min.js")
 </html>
