--- a/StudentManagementWebApp/Views/Student/Index.cshtml
+++ b/StudentManagementWebApp/Views/Student/Index.cshtml
@@ -109,7 +109,7 @@
                                     }
                                     else
                                     {
-                                        @Html.ActionLink("Details", "Details", new { id = item.Id });
+                                        @Html.ActionLink("Chi tiết", "Details", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-outline-primary" });
                                     }
                                 }
                             </td>
