--- a/StudentManagementWebApp/Views/Student/Index.cshtml
+++ b/StudentManagementWebApp/Views/Student/Index.cshtml
@@ -33,7 +33,7 @@
 
     </div>
     <div style="padding: 5px; background: black; margin: 20px 0 5px 0; margin: 0 auto; margin-bottom: 20px; color: white; width: 200px; border-radius: 5px; font-weight: bold; ">
-        @ViewBag.TestFloat - Tổng số sinh viên:
+        Tổng số sinh viên:
         <span style="color: lawngreen;">@ViewBag.TotalStudents</span>
     </div>
 
